--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "babel-polyfill": "^6.26.0",
+    "normalize.css": "^8.0.0"
   }
 }
